[tool.poetry]
name = "bot"
version = "0.1.0"
description = "a nah nuzhen description"
authors = ["cheprakovA <artemy.cheprakov@gmail.com>"]

[tool.poetry.scripts]
main-run = "bot.__main__:launch"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b7"
SQLAlchemy = "2.0.21"
aioredis = "^2.0.1"
aiosqlite = "0.19.0"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
attrs = "^23.1.0"
pydantic = "^1.9.1"
redis = "^4.3.1"
python-dotenv = "^0.20.0"
ujson = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.21.1"
mypy = "^0.950"
sqlalchemy2-stubs = "^0.0.2-alpha.35"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.4.2"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

